@@ -8,12 +8,12 @@ package net.minecraftforge.fml.loading.moddiscovery;
 import com.electronwill.nightconfig.core.file.FileConfig;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
+import com.mojang.logging.LogUtils;
 import net.minecraftforge.fml.loading.LogMarkers;
 import net.minecraftforge.forgespi.language.IModFileInfo;
 import net.minecraftforge.forgespi.locating.IModFile;
 import net.minecraftforge.forgespi.locating.ModFileFactory;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import org.slf4j.Logger;
 
 import java.io.IOException;
 import java.lang.reflect.Type;
@@ -25,7 +25,7 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 public class ModFileParser {
-    private static final Logger LOGGER = LogManager.getLogger();
+    private static final Logger LOGGER = LogUtils.getLogger();
 
     public static IModFileInfo readModList(final ModFile modFile, final ModFileFactory.ModFileInfoParser parser) {
         return parser.build(modFile);
@@ -44,9 +44,7 @@ public class ModFileParser {
         fileConfig.load();
         fileConfig.close();
         final NightConfigWrapper configWrapper = new NightConfigWrapper(fileConfig);
-        final ModFileInfo modFileInfo = new ModFileInfo(modFile, configWrapper);
-        configWrapper.setFile(modFileInfo);
-        return modFileInfo;
+        return new ModFileInfo(modFile, configWrapper, configWrapper::setFile);
     }
 
     protected static List<CoreModFile> getCoreMods(final ModFile modFile) {
@@ -67,6 +65,6 @@ public class ModFileParser {
         return coreModPaths.entrySet().stream()
                 .peek(e-> LOGGER.debug(LogMarkers.LOADING,"Found coremod {} with Javascript path {}", e.getKey(), e.getValue()))
                 .map(e -> new CoreModFile(e.getKey(), modFile.findResource(e.getValue()),modFile))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
