@@ -5,16 +5,17 @@
 
 package net.minecraftforge.fml.loading.moddiscovery;
 
+import com.mojang.logging.LogUtils;
 import net.minecraftforge.fml.loading.StringSubstitutor;
 import net.minecraftforge.fml.loading.StringUtils;
 import net.minecraftforge.forgespi.language.IConfigurable;
 import net.minecraftforge.forgespi.language.IModInfo;
 import net.minecraftforge.forgespi.language.MavenVersionAdapter;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import net.minecraftforge.forgespi.locating.ForgeFeature;
 import org.apache.maven.artifact.versioning.ArtifactVersion;
 import org.apache.maven.artifact.versioning.DefaultArtifactVersion;
 import org.apache.maven.artifact.versioning.VersionRange;
+import org.slf4j.Logger;
 
 import java.net.URL;
 import java.util.Collections;
@@ -22,14 +23,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class ModInfo implements IModInfo, IConfigurable
 {
-    private static final Logger LOGGER = LogManager.getLogger();
+    private static final Logger LOGGER = LogUtils.getLogger();
     private static final DefaultArtifactVersion DEFAULT_VERSION = new DefaultArtifactVersion("1");
     private static final Pattern VALID_MODID = Pattern.compile("^[a-z][a-z0-9_]{1,63}$");
     private static final Pattern VALID_NAMESPACE = Pattern.compile("^[a-z][a-z0-9_.-]{1,63}$");
+    private static final Pattern VALID_VERSION = Pattern.compile("^\\d+.*");
 
     private final ModFileInfo owningFile;
     private final String modId;
@@ -41,50 +42,68 @@ public class ModInfo implements IModInfo, IConfigurable
     private final boolean logoBlur;
     private final Optional<URL> updateJSONURL;
     private final List<? extends IModInfo.ModVersion> dependencies;
+
+    private final List<ForgeFeature.Bound> features;
     private final Map<String,Object> properties;
     private final IConfigurable config;
+    private final Optional<URL> modUrl;
 
     public ModInfo(final ModFileInfo owningFile, final IConfigurable config)
     {
         Optional<ModFileInfo> ownFile = Optional.ofNullable(owningFile);
         this.owningFile = owningFile;
         this.config = config;
+        // These are sourced from the mod specific [[mod]] entry
         this.modId = config.<String>getConfigElement("modId")
                 .orElseThrow(() -> new InvalidModFileException("Missing modId", owningFile));
+        // verify we have a valid modid
         if (!VALID_MODID.matcher(this.modId).matches()) {
-            LOGGER.fatal("Invalid modId found in file {} - {} does not match the standard: {}", this.owningFile.getFile().getFilePath(), this.modId, VALID_MODID.pattern());
+            LOGGER.error(LogUtils.FATAL_MARKER, "Invalid modId found in file {} - {} does not match the standard: {}", this.owningFile.getFile().getFilePath(), this.modId, VALID_MODID.pattern());
             throw new InvalidModFileException("Invalid modId found : " + this.modId, owningFile);
         }
-        this.namespace = config.<String>getConfigElement("namespace").orElse(this.modId);
+        this.namespace = config.<String>getConfigElement("namespace")
+                .orElse(this.modId);
+        // verify our namespace is valid
         if (!VALID_NAMESPACE.matcher(this.namespace).matches()) {
-            LOGGER.fatal("Invalid override namespace found in file {} - {} does not match the standard: {}", this.owningFile.getFile().getFilePath(), this.namespace, VALID_NAMESPACE.pattern());
+            LOGGER.error(LogUtils.FATAL_MARKER, "Invalid override namespace found in file {} - {} does not match the standard: {}", this.owningFile.getFile().getFilePath(), this.namespace, VALID_NAMESPACE.pattern());
             throw new InvalidModFileException("Invalid override namespace found : " + this.namespace, owningFile);
         }
         this.version = config.<String>getConfigElement("version")
                 .map(s -> StringSubstitutor.replace(s, ownFile.map(ModFileInfo::getFile).orElse(null)))
-                .map(DefaultArtifactVersion::new).orElse(DEFAULT_VERSION);
-        this.displayName = config.<String>getConfigElement("displayName").orElse(this.modId);
+                .map(DefaultArtifactVersion::new)
+                .orElse(DEFAULT_VERSION);
+        // verify we have a valid mod version
+        if (!VALID_VERSION.matcher(this.version.toString()).matches()) {
+            throw new InvalidModFileException("Illegal version number specified "+this.version, this.getOwningFile());
+        }
+        // The remaining properties all default to sensible values and are not essential
+        this.displayName = config.<String>getConfigElement("displayName")
+                .orElse(this.modId);
         this.description = config.<String>getConfigElement("description")
                 .orElse("MISSING DESCRIPTION")
                 .replace("\r\n", "\n").stripIndent();
-
         this.logoFile = Optional.ofNullable(config.<String>getConfigElement("logoFile")
-                .orElseGet(() -> ownFile.flatMap(mf -> mf.<String>getConfigElement("logoFile")).orElse(null)));
+                .orElseGet(() -> ownFile.flatMap(mf -> mf.<String>getConfigElement("logoFile"))
+                        .orElse(null)));
         this.logoBlur = config.<Boolean>getConfigElement("logoBlur")
                 .orElseGet(() -> ownFile.flatMap(f -> f.<Boolean>getConfigElement("logoBlur"))
                         .orElse(true));
-
         this.updateJSONURL = config.<String>getConfigElement("updateJSONURL")
                 .map(StringUtils::toURL);
-
-        this.dependencies = ownFile.map(mfi -> mfi.getConfigList("dependencies", this.modId)
+        this.modUrl = config.<String>getConfigElement("modUrl")
+                .map(StringUtils::toURL);
+        // These are sourced from the file rather than the mod-specific block, but with a modid tag
+        this.dependencies = ownFile.map(mfi -> mfi.getConfigList("dependencies", this.modId))
+                .orElse(Collections.emptyList())
                 .stream()
                 .map(dep -> new ModVersion(this, dep))
-                .collect(Collectors.toList()))
-                .orElse(Collections.emptyList());
-
-        this.properties = ownFile.map(mfi -> mfi.<Map<String, Object>>getConfigElement("modproperties", this.modId)
-                .orElse(Collections.emptyMap()))
+                .toList();
+        this.features = ownFile.flatMap(mfi -> mfi.<Map<String, Object>>getConfigElement("features", this.modId))
+                .stream()
+                .flatMap(m->m.entrySet().stream())
+                .map(this::makeBound)
+                .toList();
+        this.properties = ownFile.flatMap(mfi -> mfi.<Map<String, Object>>getConfigElement("modproperties", this.modId))
                 .orElse(Collections.emptyMap());
     }
 
@@ -153,6 +172,11 @@ public class ModInfo implements IModInfo, IConfigurable
     }
 
     @Override
+    public List<? extends ForgeFeature.Bound> getForgeFeatures() {
+        return this.features;
+    }
+
+    @Override
     public <T> Optional<T> getConfigElement(final String... key) {
         return this.config.getConfigElement(key);
     }
@@ -162,6 +186,19 @@ public class ModInfo implements IModInfo, IConfigurable
         return null;
     }
 
+    @Override
+    public Optional<URL> getModURL() {
+        return modUrl;
+    }
+
+    private ForgeFeature.Bound makeBound(Map.Entry<String, Object> e) {
+        if (e.getValue() instanceof String val) {
+            return new ForgeFeature.Bound(e.getKey(), val, this);
+        } else {
+            throw new InvalidModFileException("Invalid feature bound {" + e.getValue() + "} for key {" + e.getKey() + "} only strings are accepted", this.owningFile);
+        }
+    }
+
     class ModVersion implements net.minecraftforge.forgespi.language.IModInfo.ModVersion {
         private IModInfo owner;
         private final String modId;
@@ -169,6 +206,7 @@ public class ModInfo implements IModInfo, IConfigurable
         private final boolean mandatory;
         private final Ordering ordering;
         private final DependencySide side;
+        private final Optional<URL> referralUrl;
 
         public ModVersion(final IModInfo owner, final IConfigurable config) {
             this.owner = owner;
@@ -185,6 +223,8 @@ public class ModInfo implements IModInfo, IConfigurable
             this.side = config.<String>getConfigElement("side")
                     .map(DependencySide::valueOf)
                     .orElse(DependencySide.BOTH);
+            this.referralUrl = config.<String>getConfigElement("referralUrl")
+                    .map(StringUtils::toURL);
         }
 
 
@@ -228,6 +268,11 @@ public class ModInfo implements IModInfo, IConfigurable
         public IModInfo getOwner()
         {
             return owner;
+        }
+
+        @Override
+        public Optional<URL> getReferralURL() {
+            return referralUrl;
         }
     }
 
