@@ -16,20 +16,22 @@ import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.logging.LogUtils;
 import net.minecraft.client.gui.narration.NarrationElementOutput;
-import net.minecraft.client.renderer.GameRenderer;
+import net.minecraft.server.packs.resources.IoSupplier;
+import net.minecraftforge.client.ConfigScreenHandler;
 import net.minecraftforge.client.gui.widget.ModListWidget;
-import net.minecraftforge.resource.PathResourcePack;
+import net.minecraftforge.client.gui.widget.ScrollPanel;
+import net.minecraftforge.fml.loading.moddiscovery.ModFileInfo;
+import net.minecraftforge.resource.PathPackResources;
 import org.apache.commons.lang3.tuple.Pair;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.apache.maven.artifact.versioning.ComparableVersion;
 
 import com.mojang.blaze3d.systems.RenderSystem;
 
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
+import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.gui.components.EditBox;
 import net.minecraft.client.gui.components.Button;
@@ -48,7 +50,6 @@ import net.minecraftforge.common.util.MavenVersionStringHelper;
 import net.minecraftforge.fml.ModContainer;
 import net.minecraftforge.fml.ModList;
 import net.minecraftforge.fml.VersionChecker;
-import net.minecraftforge.client.ConfigGuiHandler;
 import net.minecraftforge.fml.loading.FMLPaths;
 import net.minecraftforge.fml.loading.StringUtils;
 import net.minecraftforge.resource.ResourcePackLoader;
@@ -57,12 +58,12 @@ import net.minecraftforge.forgespi.language.IModInfo;
 import net.minecraft.locale.Language;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.Style;
-import net.minecraft.network.chat.TranslatableComponent;
+import org.slf4j.Logger;
 
 public class ModListScreen extends Screen
 {
     private static String stripControlCodes(String value) { return net.minecraft.util.StringUtil.stripColor(value); }
-    private static final Logger LOGGER = LogManager.getLogger();
+    private static final Logger LOGGER = LogUtils.getLogger();
     private enum SortType implements Comparator<IModInfo>
     {
         NORMAL,
@@ -79,13 +80,15 @@ public class ModListScreen extends Screen
         }
 
         Component getButtonText() {
-            return new TranslatableComponent("fml.menu.mods." + StringUtils.toLowerCase(name()));
+            return Component.translatable("fml.menu.mods." + StringUtils.toLowerCase(name()));
         }
     }
 
     private static final int PADDING = 6;
+    private static final int BUTTON_MARGIN = 1;
+    private static final int NUM_BUTTONS = SortType.values().length;
 
-    private Screen parentScreen;
+    private final Screen parentScreen;
 
     private ModListWidget modList;
     private InfoPanel modInfo;
@@ -95,8 +98,6 @@ public class ModListScreen extends Screen
     private final List<IModInfo> unsortedMods;
     private Button configButton, openModsFolderButton, doneButton;
 
-    private int buttonMargin = 1;
-    private int numButtons = SortType.values().length;
     private String lastFilterText = "";
 
     private EditBox search;
@@ -106,10 +107,10 @@ public class ModListScreen extends Screen
 
     public ModListScreen(Screen parentScreen)
     {
-        super(new TranslatableComponent("fml.menu.mods.title"));
+        super(Component.translatable("fml.menu.mods.title"));
         this.parentScreen = parentScreen;
-        this.mods = Collections.unmodifiableList(ModList.get().getMods());
-        this.unsortedMods = Collections.unmodifiableList(this.mods);
+        this.mods = ModList.get().getMods();
+        this.unsortedMods = List.copyOf(this.mods);
     }
 
     class InfoPanel extends ScrollPanel {
@@ -174,16 +175,14 @@ public class ModListScreen extends Screen
         }
 
         @Override
-        protected void drawPanel(PoseStack poseStack, int entryRight, int relativeY, Tesselator tess, int mouseX, int mouseY)
+        protected void drawPanel(GuiGraphics guiGraphics, int entryRight, int relativeY, Tesselator tess, int mouseX, int mouseY)
         {
             if (logoPath != null) {
-                RenderSystem.setShader(GameRenderer::getPositionTexShader);
                 RenderSystem.enableBlend();
                 RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0F);
-                RenderSystem.setShaderTexture(0, logoPath);
                 // Draw the logo image inscribed in a rectangle with width entryWidth (minus some padding) and height 50
                 int headerHeight = 50;
-                GuiUtils.drawInscribedRect(poseStack, left + PADDING, relativeY, width - (PADDING * 2), headerHeight, logoDims.width, logoDims.height, false, true);
+                guiGraphics.blitInscribed(logoPath, left + PADDING, relativeY, width - (PADDING * 2), headerHeight, logoDims.width, logoDims.height, false, true);
                 relativeY += headerHeight + PADDING;
             }
 
@@ -192,7 +191,7 @@ public class ModListScreen extends Screen
                 if (line != null)
                 {
                     RenderSystem.enableBlend();
-                    ModListScreen.this.font.drawShadow(poseStack, line, left + PADDING, relativeY, 0xFFFFFF);
+                    guiGraphics.drawString(ModListScreen.this.font, line, left + PADDING, relativeY, 0xFFFFFF);
                     RenderSystem.disableBlend();
                 }
                 relativeY += font.lineHeight;
@@ -200,7 +199,7 @@ public class ModListScreen extends Screen
 
             final Style component = findTextLine(mouseX, mouseY);
             if (component!=null) {
-                ModListScreen.this.renderComponentHoverEffect(poseStack, component, mouseX, mouseY);
+                guiGraphics.renderComponentHoverEffect(ModListScreen.this.font, component, mouseX, mouseY);
             }
         }
 
@@ -208,7 +207,7 @@ public class ModListScreen extends Screen
             if (!isMouseOver(mouseX, mouseY))
                 return null;
 
-            double offset = (mouseY - top) + border + scrollDistance + 1;
+            double offset = (mouseY - top - PADDING - border) + scrollDistance;
             if (logoPath != null) {
                 offset -= 50;
             }
@@ -216,10 +215,10 @@ public class ModListScreen extends Screen
                 return null;
 
             int lineIdx = (int) (offset / font.lineHeight);
-            if (lineIdx >= lines.size() || lineIdx < 1)
+            if (lineIdx >= lines.size() || lineIdx < 0)
                 return null;
 
-            FormattedCharSequence line = lines.get(lineIdx-1);
+            FormattedCharSequence line = lines.get(lineIdx);
             if (line != null)
             {
                 return font.getSplitter().componentStyleAtWidth(line, mouseX - left - border);
@@ -255,22 +254,31 @@ public class ModListScreen extends Screen
             listWidth = Math.max(listWidth,getFontRenderer().width(mod.getDisplayName()) + 10);
             listWidth = Math.max(listWidth,getFontRenderer().width(MavenVersionStringHelper.artifactVersionToString(mod.getVersion())) + 5);
         }
-        listWidth = Math.max(Math.min(listWidth, width/3), 100);
-        listWidth += listWidth % numButtons != 0 ? (numButtons - listWidth % numButtons) : 0;
+        listWidth = Math.max(Math.min(listWidth, width / 3), 100);
+        listWidth += listWidth % NUM_BUTTONS != 0 ? (NUM_BUTTONS - listWidth % NUM_BUTTONS) : 0;
 
         int modInfoWidth = this.width - this.listWidth - (PADDING * 3);
         int doneButtonWidth = Math.min(modInfoWidth, 200);
         int y = this.height - 20 - PADDING;
         int fullButtonHeight = PADDING + 20 + PADDING;
 
-        doneButton = new Button(((listWidth + PADDING + this.width - doneButtonWidth) / 2), y, doneButtonWidth, 20, new TranslatableComponent("gui.done"), b -> ModListScreen.this.onClose());
-        openModsFolderButton = new Button(6, y, this.listWidth, 20, new TranslatableComponent("fml.menu.mods.openmodsfolder"), b -> Util.getPlatform().openFile(FMLPaths.MODSDIR.get().toFile()));
-        y -= 20 + PADDING;
-        configButton = new Button(6, y, this.listWidth, 20, new TranslatableComponent("fml.menu.mods.config"), b -> ModListScreen.this.displayModConfig());
-        y -= 14 + PADDING;
-        search = new EditBox(getFontRenderer(), PADDING + 1, y, listWidth - 2, 14, new TranslatableComponent("fml.menu.mods.search"));
+        doneButton = Button.builder(Component.translatable("gui.done"), b -> ModListScreen.this.onClose())
+                .bounds(((listWidth + PADDING + this.width - doneButtonWidth) / 2), y, doneButtonWidth, 20)
+                .build();
 
-        this.modList = new ModListWidget(this, listWidth, fullButtonHeight, search.y - getFontRenderer().lineHeight - PADDING);
+        openModsFolderButton = Button.builder(Component.translatable("fml.menu.mods.openmodsfolder"), b -> Util.getPlatform().openFile(FMLPaths.MODSDIR.get().toFile()))
+                .bounds(6, y, this.listWidth, 20)
+                .build();
+
+        y -= 20 + PADDING;
+        configButton = Button.builder(Component.translatable("fml.menu.mods.config"), b -> ModListScreen.this.displayModConfig())
+                .bounds(6, y, this.listWidth, 20)
+                .build();
+
+        y -= 14 + PADDING;
+        search = new EditBox(getFontRenderer(), PADDING + 1, y, listWidth - 2, 14, Component.translatable("fml.menu.mods.search"));
+
+        this.modList = new ModListWidget(this, listWidth, fullButtonHeight, search.getY() - getFontRenderer().lineHeight - PADDING);
         this.modList.setLeftPos(6);
         this.modInfo = new InfoPanel(this.minecraft, modInfoWidth, this.height - PADDING - fullButtonHeight, PADDING);
 
@@ -281,17 +289,26 @@ public class ModListScreen extends Screen
         this.addRenderableWidget(configButton);
         this.addRenderableWidget(openModsFolderButton);
 
-        search.setFocus(false);
+        search.setFocused(false);
         search.setCanLoseFocus(true);
         configButton.active = false;
 
-        final int width = listWidth / numButtons;
+        final int width = listWidth / NUM_BUTTONS;
         int x = PADDING;
-        addRenderableWidget(SortType.NORMAL.button = new Button(x, PADDING, width - buttonMargin, 20, SortType.NORMAL.getButtonText(), b -> resortMods(SortType.NORMAL)));
-        x += width + buttonMargin;
-        addRenderableWidget(SortType.A_TO_Z.button = new Button(x, PADDING, width - buttonMargin, 20, SortType.A_TO_Z.getButtonText(), b -> resortMods(SortType.A_TO_Z)));
-        x += width + buttonMargin;
-        addRenderableWidget(SortType.Z_TO_A.button = new Button(x, PADDING, width - buttonMargin, 20, SortType.Z_TO_A.getButtonText(), b -> resortMods(SortType.Z_TO_A)));
+        addRenderableWidget(SortType.NORMAL.button = Button.builder(SortType.NORMAL.getButtonText(), b -> resortMods(SortType.NORMAL))
+                .bounds(x, PADDING, width - BUTTON_MARGIN, 20)
+                .build());
+
+        x += width + BUTTON_MARGIN;
+        addRenderableWidget(SortType.A_TO_Z.button = Button.builder(SortType.A_TO_Z.getButtonText(), b -> resortMods(SortType.A_TO_Z))
+                .bounds(x, PADDING, width - BUTTON_MARGIN, 20)
+                .build());
+
+        x += width + BUTTON_MARGIN;
+        addRenderableWidget(SortType.Z_TO_A.button = Button.builder(SortType.Z_TO_A.getButtonText(), b -> resortMods(SortType.Z_TO_A))
+                .bounds(x, PADDING, width - BUTTON_MARGIN, 20)
+                .build());
+
         resortMods(SortType.NORMAL);
         updateCache();
     }
@@ -301,7 +318,9 @@ public class ModListScreen extends Screen
         if (selected == null) return;
         try
         {
-            ConfigGuiHandler.getGuiFactoryFor(selected.getInfo()).map(f->f.apply(this.minecraft, this)).ifPresent(newScreen -> this.minecraft.setScreen(newScreen));
+            ConfigScreenHandler.getScreenFactoryFor(selected.getInfo())
+                    .map(f -> f.apply(this.minecraft, this))
+                    .ifPresent(newScreen -> this.minecraft.setScreen(newScreen));
         }
         catch (final Exception e)
         {
@@ -328,7 +347,10 @@ public class ModListScreen extends Screen
             modList.refreshList();
             if (selected != null)
             {
-                selected = modList.children().stream().filter(e -> e.getInfo() == selected.getInfo()).findFirst().orElse(null);
+                selected = modList.children().stream()
+                        .filter(e -> e.getInfo() == selected.getInfo())
+                        .findFirst()
+                        .orElse(null);
                 updateCache();
             }
             sorted = true;
@@ -337,13 +359,19 @@ public class ModListScreen extends Screen
 
     public <T extends ObjectSelectionList.Entry<T>> void buildModList(Consumer<T> modListViewConsumer, Function<IModInfo, T> newEntry)
     {
-        mods.forEach(mod->modListViewConsumer.accept(newEntry.apply(mod)));
+        for (IModInfo mod : mods) {
+            modListViewConsumer.accept(newEntry.apply(mod));
+        }
     }
 
     private void reloadMods()
     {
-        this.mods = this.unsortedMods.stream().
-                filter(mi->StringUtils.toLowerCase(stripControlCodes(mi.getDisplayName())).contains(StringUtils.toLowerCase(search.getValue()))).collect(Collectors.toList());
+        this.mods = this.unsortedMods
+                .stream()
+                .filter(mi ->
+                    StringUtils.toLowerCase(stripControlCodes(mi.getDisplayName()))
+                        .contains(StringUtils.toLowerCase(search.getValue()))
+                ).collect(Collectors.toList());
         lastFilterText = search.getValue();
     }
 
@@ -360,17 +388,17 @@ public class ModListScreen extends Screen
     }
 
     @Override
-    public void render(PoseStack poseStack, int mouseX, int mouseY, float partialTick)
+    public void render(GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTick)
     {
-        this.modList.render(poseStack, mouseX, mouseY, partialTick);
+        this.modList.render(guiGraphics, mouseX, mouseY, partialTick);
         if (this.modInfo != null)
-            this.modInfo.render(poseStack, mouseX, mouseY, partialTick);
+            this.modInfo.render(guiGraphics, mouseX, mouseY, partialTick);
 
-        Component text = new TranslatableComponent("fml.menu.mods.search");
+        Component text = Component.translatable("fml.menu.mods.search");
         int x = modList.getLeft() + ((modList.getRight() - modList.getLeft()) / 2) - (getFontRenderer().width(text) / 2);
-        this.search.render(poseStack, mouseX , mouseY, partialTick);
-        super.render(poseStack, mouseX, mouseY, partialTick);
-        getFontRenderer().draw(poseStack, text.getVisualOrderText(), x, search.y - getFontRenderer().lineHeight, 0xFFFFFF);
+        this.search.render(guiGraphics, mouseX , mouseY, partialTick);
+        super.render(guiGraphics, mouseX, mouseY, partialTick);
+        guiGraphics.drawString(getFontRenderer(), text.getVisualOrderText(), x, search.getY() - getFontRenderer().lineHeight, 0xFFFFFF, false);
     }
 
     public Minecraft getMinecraftInstance()
@@ -397,7 +425,7 @@ public class ModListScreen extends Screen
             return;
         }
         IModInfo selectedMod = selected.getInfo();
-        this.configButton.active = ConfigGuiHandler.getGuiFactoryFor(selectedMod).isPresent();
+        this.configButton.active = ConfigScreenHandler.getScreenFactoryFor(selectedMod).isPresent();
         List<String> lines = new ArrayList<>();
         VersionChecker.CheckResult vercheck = VersionChecker.getResult(selectedMod);
 
@@ -405,15 +433,15 @@ public class ModListScreen extends Screen
         Pair<ResourceLocation, Size2i> logoData = selectedMod.getLogoFile().map(logoFile->
         {
             TextureManager tm = this.minecraft.getTextureManager();
-            final PathResourcePack resourcePack = ResourcePackLoader.getPackFor(selectedMod.getModId())
+            final PathPackResources resourcePack = ResourcePackLoader.getPackFor(selectedMod.getModId())
                     .orElse(ResourcePackLoader.getPackFor("forge").
                             orElseThrow(()->new RuntimeException("Can't find forge, WHAT!")));
             try
             {
                 NativeImage logo = null;
-                InputStream logoResource = resourcePack.getRootResource(logoFile);
+                IoSupplier<InputStream> logoResource = resourcePack.getRootResource(logoFile);
                 if (logoResource != null)
-                    logo = NativeImage.read(logoResource);
+                    logo = NativeImage.read(logoResource.get());
                 if (logo != null)
                 {
 
@@ -444,14 +472,14 @@ public class ModListScreen extends Screen
                 lines.add(ForgeI18n.parseMessage("fml.menu.mods.info.authors", authors)));
         selectedMod.getConfig().getConfigElement("displayURL").ifPresent(displayURL ->
                 lines.add(ForgeI18n.parseMessage("fml.menu.mods.info.displayurl", displayURL)));
-        if (selectedMod.getOwningFile() == null || selectedMod.getOwningFile().getMods().size()==1)
+        if (selectedMod.getOwningFile() == null || selectedMod.getOwningFile().getMods().size() == 1)
             lines.add(ForgeI18n.parseMessage("fml.menu.mods.info.nochildmods"));
         else
             lines.add(ForgeI18n.parseMessage("fml.menu.mods.info.childmods", selectedMod.getOwningFile().getMods().stream().map(IModInfo::getDisplayName).collect(Collectors.joining(","))));
 
-        if (vercheck.status() == VersionChecker.Status.OUTDATED || vercheck.status() == VersionChecker.Status.BETA_OUTDATED)
+        if (vercheck.status().isOutdated())
             lines.add(ForgeI18n.parseMessage("fml.menu.mods.info.updateavailable", vercheck.url() == null ? "" : vercheck.url()));
-        lines.add(ForgeI18n.parseMessage("fml.menu.mods.info.license", selectedMod.getOwningFile().getLicense()));
+        lines.add(ForgeI18n.parseMessage("fml.menu.mods.info.license", ((ModFileInfo) selectedMod.getOwningFile()).getLicense()));
         lines.add(null);
         lines.add(selectedMod.getDescription());
 
@@ -465,7 +493,7 @@ public class ModListScreen extends Screen
         }
         */
 
-        if ((vercheck.status() == VersionChecker.Status.OUTDATED || vercheck.status() == VersionChecker.Status.BETA_OUTDATED) && vercheck.changes().size() > 0)
+        if (vercheck.status().isOutdated() && !vercheck.changes().isEmpty())
         {
             lines.add(null);
             lines.add(ForgeI18n.parseMessage("fml.menu.mods.info.changelogheader"));
